refactor: comprehensive 'one by one' cleanup of IDE warnings across ib-mna-engine